--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost/api
-spring.datasource.username=backend
-spring.datasource.password=Labas123
+spring.datasource.username=username
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -10,5 +10,5 @@ server.port=8443
 server.ssl.enabled=true
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:keystore/haroldas.p12
-server.ssl.key-store-password=mackelo
-server.ssl.key-alias=haroldas
+server.ssl.key-store-password=password
+server.ssl.key-alias=alias
